tests/ui/hygiene/rustc_res/private_ctor_not_available_in_child_scope_through_reexport.stderr
error[E0423]: cannot initialize a tuple struct which contains private fields
  --> tests/ui/hygiene/rustc_res/private_ctor_not_available_in_child_scope_through_reexport.rs:14:21
   |
14 |             let _ = crate::S(0);
   |                     ^^^^^^^^
   |
note: the type is accessed through this re-export, but the type's constructor is not visible in this import's scope due to private fields
  --> tests/ui/hygiene/rustc_res/private_ctor_not_available_in_child_scope_through_reexport.rs:7:5
   |
 7 | use def::S;
   |     ^^^^^^
help: the type can be constructed directly, because its fields are available from the current scope
   |
14 |             let _ = crate::def::S(0);
   |                            +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.
